Tue Sep 23 15:18:08 1997  Scott Christley  <scottc@net-community.com>

	* application.make: Utilize object directory.
	* tool.make (object_dir): Rename to object-dir.
	* library.make (object_dir): Rename to object-dir.

Tue Sep 23 13:48:02 1997  Scott Christley  <scottc@net-community.com>

	* DESIGN: New file.
	* README: New file.
	* common.make: Add variable for the Resources directory.
	* library.make: Properly install the shared library.
	* rules.make: Delete temporary files.
	* target.make: Remove unneeded code.
	* tool.make: Put the stamps in the object directory.

Mon Sep 22 17:57:50 1997  Scott Christley  <scottc@net-community.com>

	* common.make: Add support for putting object files in a different
	directory.
	* tool.make: Likewise.
	* rules.make: Likewise.
	* library.make: Add support for shared libraries.
	* target.make: Likewise.

Mon Sep 22 15:12:14 1997  Scott Christley  <scottc@net-community.com>

	* ChangeLog: New file.